[svn r11890] try to load a file from the current loc
--HG--
branch : sod